[1803-npe-when-using-run-to-line-command-in-firefox-debugger] fix run-to-line breakpoint creation